# VLineups

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  main.py
frontend/: .env.example  .prettierignore  .prettierrc  index.html  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/ui/: VButton.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: HomeView.vue
